env/dev/awesome-app-deploy-overlay.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-app-deployment
  namespace: awesome-app
spec:
  replicas: 1
