env/dev/awesome-app-ing-overlay.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-app-ing
  namespace: awesome-app
spec:
  rules:
    - host: awesome-dev.bespinian.io
      http:
        paths:
          - path: /.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: awesome-app
                port:
                  number: 80
